Adding design for the page after game finishes, reformating the code.